--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -6,3 +6,23 @@ layout: default
 <div class="posting">
 {{ content }}
 </div>
+{% if page.comments %}
+<h2>Comments</h2>
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+	/* * * CONFIGURATION VARIABLES: THIS CODE IS ONLY AN EXAMPLE * * */
+	var disqus_shortname = 'nickkelly'; // Required - Replace example with your forum shortname
+	var disqus_identifier = '{{ page.id }}';
+	var disqus_title = '{{ page.title }}';
+	var disqus_url = '{{ site.url }}{{ page.url }}';
+
+	/* * * DON'T EDIT BELOW THIS LINE * * */
+	(function() {
+	 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+	 dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+	 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+	 })();
+</script>
+{% else %}
+<h3>Comments disabled</h3>
+{% endif %}
