--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>{{ page.title }} - Nick Kelly</title>
+<meta charset="utf-8"/>
 <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="/styles/main.css"/>
 <link rel="stylesheet" type="text/css" href="/js/fancybox/jquery.fancybox.css"/>
