--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,18 +2,7 @@
 layout: default
 ---
 <h1 class="posting-title">{{ page.title }}</h1>
-<span class="large-date">{{ page.date | date_to_string }}
-{% if post.category %}
- in {{ post.category | capitalize }}
-{% endif %}
-</span>
-{% if post.tags %}
-	<ul class="tags">
-	{% for tag in post.tags %}
-		<li>{{ tag }}</li>
-	{% endfor %}
-	</ul>
-{% endif %}
+<!--<span class="large-date">{{ page.date | date_to_string }}</span>-->
 <div class="posting">
 {{ content }}
 </div>
@@ -34,6 +23,4 @@ layout: default
 	 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
 	 })();
 </script>
-{% else %}
-<h3>Comments disabled</h3>
 {% endif %}
