--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -25,7 +25,7 @@ layout: default
 	var disqus_shortname = 'nickkelly'; // Required - Replace example with your forum shortname
 	var disqus_identifier = '{{ page.id }}';
 	var disqus_title = '{{ page.title }}';
-	var disqus_url = 'http://nickkelly.co{{ page.url }}';
+	var disqus_url = 'http://www.nickkelly.io{{ page.url }}';
 
 	/* * * DON'T EDIT BELOW THIS LINE * * */
 	(function() {
