Adjust styles, change fonts to Lato

--- a/styles/main.css
+++ b/styles/main.css
@@ -9,26 +9,26 @@
 
 @font-face 
 {
-	font-family: "VegurR";
-	src: url('/fonts/Vegur-R.otf') format("opentype");
+	font-family: "Lato-Regular";
+	src: url('/fonts/Lato-Regular.ttf') format("truetype");
 }
 
 @font-face
 {
-	font-family: "VegurM";
-	src: url('/fonts/Vegur-M.otf') format("opentype");
+	font-family: "Lato-Bold";
+	src: url('/fonts/Lato-Bold.ttf') format("truetype");
 }
 
 @font-face 
 {
-	font-family: "VegurL";
-	src: url('/fonts/Vegur-L.otf') format("opentype");
+	font-family: "Lato-Light";
+	src: url('/fonts/Lato-Light.ttf') format("truetype");
 }
 
 @font-face
 {
-	font-family: "VegurB";
-	src: url('/fonts/Vegur-B.otf') format("opentype");
+	font-family: "Lato-Black";
+	src: url('/fonts/Lato-Black.ttf') format("truetype");
 }
 
 body
@@ -67,12 +67,13 @@ body
 {
 	position:absolute;
 	bottom:0;
-	font-family:"VegurL";
+	font-family:"Lato-Light";
 	font-size:48pt;
-	color:#FFF;
+	color:#FFF !important;
 	display:inline-block;
 	vertical-align:bottom;
 	text-shadow:0 0 1px #FFF;
+	text-decoration:none;
 }
 
 #nav
@@ -108,7 +109,7 @@ body
 #nav > li a
 {
 	color:#FFF;
-	font-family:"VegurL";
+	font-family:"Lato-Light";
 	font-size:18pt;
 	text-decoration:none;
 	display:block;
@@ -134,7 +135,7 @@ body
 	width:960px;
 	margin:0 auto;
 	color:#212121;
-	font-family:"VegurR";
+	font-family:"Lato-Regular";
 	font-size:12pt;
 	padding:20px 0;
 }
@@ -142,7 +143,7 @@ body
 #content a
 {
 	color:#555;
-	font-family:"VegurM";
+	font-family:"Lato-Bold";
 	text-decoration:none;
 	border-bottom:solid 1px #CCC;
 }
@@ -155,14 +156,14 @@ body
 
 h1
 {
-	font-family:"VegurM";
+	font-family:"Lato-Bold";
 	font-size:36pt;
 	margin:20px 0;
 }
 
 h2
 {
-	font-family:"VegurM";
+	font-family:"Lato-Bold";
 	color:#333;
 	font-size:24pt;
 	margin:10px 0;
@@ -173,7 +174,7 @@ h2
 h3
 {
 	font-size:18pt;
-	font-family:"VegurM";
+	font-family:"Lato-Bold";
 	clear:both;
 	margin-top:40px;
 }
@@ -183,7 +184,7 @@ h4
 	font-size:14pt;
 	font-style:italic;
 	color:#888;
-	font-family:"VegurL";
+	font-family:"Lato-Light";
 	margin-bottom:10px;
 }
 
@@ -207,7 +208,7 @@ img.project
 	font-size:14pt;
 	font-style:italic;
 	color:#888;
-	font-family:"VegurL";
+	font-family:"Lato-Light";
 	margin-top:5px;
 	margin-bottom:10px;
 	display:block;
@@ -245,6 +246,20 @@ img.project
 {
 	font-size:18pt;
 	line-height:24pt;
+}
+
+ul.large
+{
+	margin-left:20px;
+	margin-bottom:24px;
+	font-size:16pt;
+	line-height:22pt;
+}
+
+ul.large > li
+{
+	list-style:square;
+	color: #ccc;
 }
 
 .page
@@ -285,7 +300,7 @@ img.project
 
 .posts li .date {
 	font-size:14pt;
-	font-family:"VegurL";
+	font-family:"Lato-Light";
 	color:#AAA;
 	margin-top:5px;
 }
@@ -294,7 +309,7 @@ img.project
 	text-decoration:none !important;
 	border:0 !important;
 	font-size:14pt !important;
-	font-family:"VegurL" !important;
+	font-family:"Lato-Light" !important;
 	color:#AAA !important;
 }
 
@@ -334,7 +349,7 @@ img.project
 .large-date {
 	font-size:20pt;
 	margin:20px 0;
-	font-family:"VegurL";
+	font-family:"Lato-Light";
 	color:#AAA;
 	float:right;
 }
