--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 		<div id="header">
 			<div class="centered">
 				<div id="name">
-					NICK KELLY
+					<a href="/">NICK KELLY</a>
 				</div>
 				<ul id="nav">
 					<li><a href="/">About</a></li>
