Change font to WorkSans, tweak styles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,7 @@
 	<div id="headerb">
 		<div id="header">
 			<div class="centered">
-				<div id="name">
-					<a href="/">NICK KELLY</a>
-				</div>
+				<a id="name" href="/">NICK KELLY</a>
 				<ul id="nav">
 					<li><a href="/">About</a></li>
 					<li><a href="/blog">Blog</a></li>
