--- a/styles/main.css
+++ b/styles/main.css
@@ -9,26 +9,26 @@
 
 @font-face 
 {
-	font-family: "Lato-Regular";
-	src: url('/fonts/Lato-Regular.ttf') format("truetype");
+	font-family: "WorkSans-Regular";
+	src: url('/fonts/WorkSans-Regular.ttf') format("truetype");
 }
 
 @font-face
 {
-	font-family: "Lato-Bold";
-	src: url('/fonts/Lato-Bold.ttf') format("truetype");
+	font-family: "WorkSans-Medium";
+	src: url('/fonts/WorkSans-Medium.ttf') format("truetype");
 }
 
 @font-face 
 {
-	font-family: "Lato-Light";
-	src: url('/fonts/Lato-Light.ttf') format("truetype");
+	font-family: "WorkSans-Light";
+	src: url('/fonts/WorkSans-Light.ttf') format("truetype");
 }
 
 @font-face
 {
-	font-family: "Lato-Black";
-	src: url('/fonts/Lato-Black.ttf') format("truetype");
+	font-family: "WorkSans-Bold";
+	src: url('/fonts/WorkSans-Bold.ttf') format("truetype");
 }
 
 body
@@ -67,7 +67,7 @@ body
 {
 	position:absolute;
 	bottom:0;
-	font-family:"Lato-Light";
+	font-family:"WorkSans-Light";
 	font-size:48pt;
 	color:#FFF !important;
 	display:inline-block;
@@ -109,7 +109,7 @@ body
 #nav > li a
 {
 	color:#FFF;
-	font-family:"Lato-Light";
+	font-family:"WorkSans-Light";
 	font-size:18pt;
 	text-decoration:none;
 	display:block;
@@ -135,7 +135,7 @@ body
 	width:960px;
 	margin:0 auto;
 	color:#212121;
-	font-family:"Lato-Regular";
+	font-family:"WorkSans-Regular";
 	font-size:12pt;
 	padding:20px 0;
 }
@@ -143,7 +143,7 @@ body
 #content a
 {
 	color:#555;
-	font-family:"Lato-Bold";
+	font-family:"WorkSans-Medium";
 	text-decoration:none;
 	border-bottom:solid 1px #CCC;
 }
@@ -156,14 +156,14 @@ body
 
 h1
 {
-	font-family:"Lato-Bold";
+	font-family:"WorkSans-Medium";
 	font-size:36pt;
 	margin:20px 0;
 }
 
 h2
 {
-	font-family:"Lato-Bold";
+	font-family:"WorkSans-Medium";
 	color:#333;
 	font-size:24pt;
 	margin:10px 0;
@@ -174,7 +174,7 @@ h2
 h3
 {
 	font-size:18pt;
-	font-family:"Lato-Bold";
+	font-family:"WorkSans-Medium";
 	clear:both;
 	margin-top:40px;
 }
@@ -184,7 +184,7 @@ h4
 	font-size:14pt;
 	font-style:italic;
 	color:#888;
-	font-family:"Lato-Light";
+	font-family:"WorkSans-Light";
 	margin-bottom:10px;
 }
 
@@ -208,7 +208,7 @@ img.project
 	font-size:14pt;
 	font-style:italic;
 	color:#888;
-	font-family:"Lato-Light";
+	font-family:"WorkSans-Light";
 	margin-top:5px;
 	margin-bottom:10px;
 	display:block;
@@ -300,7 +300,7 @@ ul.large > li
 
 .posts li .date {
 	font-size:14pt;
-	font-family:"Lato-Light";
+	font-family:"WorkSans-Light";
 	color:#AAA;
 	margin-top:5px;
 }
@@ -309,7 +309,7 @@ ul.large > li
 	text-decoration:none !important;
 	border:0 !important;
 	font-size:14pt !important;
-	font-family:"Lato-Light" !important;
+	font-family:"WorkSans-Light" !important;
 	color:#AAA !important;
 }
 
@@ -349,7 +349,7 @@ ul.large > li
 .large-date {
 	font-size:20pt;
 	margin:20px 0;
-	font-family:"Lato-Light";
+	font-family:"WorkSans-Light";
 	color:#AAA;
 	float:right;
 }
