--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -14,7 +14,7 @@ layout: default
 	var disqus_shortname = 'nickkelly'; // Required - Replace example with your forum shortname
 	var disqus_identifier = '{{ page.id }}';
 	var disqus_title = '{{ page.title }}';
-	var disqus_url = 'http://www.nickkelly.io{{ page.url }}';
+	var disqus_url = 'https://www.nickkelly.io{{ page.url }}';
 
 	/* * * DON'T EDIT BELOW THIS LINE * * */
 	(function() {
